modified:   ABTestProxy/ExperimentAdapter.java